feat: Using quarkus profile to set test configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ stages:
 
 compile:
   stage: compile
+  variables:
+    QUARKUS_PROFILE: "test"
   tags:
     - stackgres-runner
   script:
@@ -163,7 +165,6 @@ integration test jvm image:
   variables:
     OPERATOR_IN_KUBERNETES: "true"
     K8S_SUFFIX: jvm-image
-    SKIP_QUARKUS_TEST: "true"
   script:
     - 'export IMAGE_TAG="${CI_COMMIT_TAG:-"$CI_COMMIT_SHORT_SHA"}"-jvm'
     - 'export IMAGE_NAME="stackgres/operator:$IMAGE_TAG"'
