--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -28,6 +28,11 @@ quarkus.http.ssl.certificate.file=${quarkus.http.ssl.certificate.file}
 quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
 
+# Test SSL configuration
+%test.quarkus.http.ssl.certificate.file=certs/server.crt
+%test.quarkus.http.ssl.certificate.key-file=certs/server-key.pem
+%test.quarkus.ssl.native=true
+
 # Authentication
 
 quarkus.http.auth.basic=true
