--- a/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
@@ -18,7 +18,7 @@ static_resources:
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: postgres_raw_entry_port
+          port_value: postgres_repl_entry_port
       filter_chains:
         - filters:
             - name: envoy.tcp_proxy
@@ -33,7 +33,7 @@ static_resources:
       hosts:
         socket_address:
           address: 127.0.0.1
-          port_value: postgres_raw_port
+          port_value: postgres_port
 admin:
   access_log_path: "/dev/null"
   address:
