--- a/stackgres-k8s/src/operator/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/versions.properties
@@ -1,9 +1,9 @@
-#Tue Apr 07 18:45:48 CEST 2020
+#Thu Apr 16 17:30:15 CEST 2020
 wal_g=0.2.14
-fluent-bit=1.3.11
 patroni=1.6.4
 postgres_exporter=0.8.0
 postgresql=11.7,12.2
 envoy=1.13.1
 pgbouncer=1.12.0
-fluentd=1.10-1
+fluentbit=1.4.1
+fluentd=1.9.3
