feat: Improve disk size / usage stats collection
This modified commands should provide disk stats more in line with what
administrators would expect to see.

--- a/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
@@ -1,8 +1,8 @@
 cpuFound=echo "$(cat /proc/cpuinfo | grep '^processor' | wc -l)"
 memoryFound=echo "$(cat /proc/meminfo|grep "^MemTotal:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)Ki"|numfmt --from=iec-i --to=iec-i
 memoryUsed=echo "$(($(cat /proc/meminfo|grep "^MemTotal:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)-$(cat /proc/meminfo|grep "^MemAvailable:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)))Ki"|numfmt --from=iec-i --to=iec-i
-diskFound=echo "$(df -H /var/lib/postgresql | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 4)i"
-diskUsed=echo "$(du -B 1 -s /var/lib/postgresql|sed 's/\\s\\+/ /g'|cut -d ' ' -f 1|numfmt --to=iec-i)"
+diskFound=echo "$(df -h /var/lib/postgresql | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2)i"
+diskUsed=echo "$(df -h /var/lib/postgresql | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3)i"
 load1m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 1 | tr ' ' '\\n')"
 load5m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2 | tr ' ' '\\n')"
 load10m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3 | tr ' ' '\\n')"
