Fixed new line characters, extended linter and script

--- a/stackgres-k8s/ci/utils/yamllint-config.yaml
+++ b/stackgres-k8s/ci/utils/yamllint-config.yaml
@@ -1,6 +1,8 @@
 extends: default
 
 rules:
+  document-start:
+    present: false  
   line-length:
-    max: 120
+    max: 1000
     level: warning
