feat: implement REST API endpoint to query distributed logs

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -62,7 +62,9 @@ spec:
   {{- end }}
   {{- if .Values.nonProductionOptions }}
   nonProductionOptions:
-  {{- if .Values.nonProductionOptions.disableClusterPodAntiAffinity }}
+  {{- if not .Values.nonProductionOptions.disableClusterPodAntiAffinity }}
+    disableClusterPodAntiAffinity: false
+  {{- else }}
     disableClusterPodAntiAffinity: {{ .Values.nonProductionOptions.disableClusterPodAntiAffinity }}
   {{- end }}
   {{- end }}
