--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -50,3 +50,7 @@ stackgres.prometheus.grafanaEmbedded=${stackgres.prometheus.grafanaEmbedded}
 stackgres.documentation.uri=${stackgres.documentation.uri}
 stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
 stackgres.authentication.secretName=${stackgres.authentication.secretName}
+
+# jOOQ
+
+org.jooq.no-logo=true
