fix: check enable anti affinity

--- a/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
+++ b/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
@@ -13,4 +13,4 @@ sidecar:
   prometheus:
     allowAutobind: false
 nonProductionOptions:
-  disableClusterPodAntiAffinity: true
+  disableClusterPodAntiAffinity: false
