--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -86,7 +86,8 @@ spec:
                 {"op":"replace","path":"/webhooks/2/clientConfig/caBundle","value":"'"$CRT"'"},
                 {"op":"replace","path":"/webhooks/3/clientConfig/caBundle","value":"'"$CRT"'"},
                 {"op":"replace","path":"/webhooks/4/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"}]'
+                {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"},
+                {"op":"replace","path":"/webhooks/6/clientConfig/caBundle","value":"'"$CRT"'"}]'
             kubectl patch mutatingwebhookconfiguration \
               -n '{{ .Release.Namespace }}' '{{ .Release.Name }}' --type json --patch '[
                 {"op":"replace","path":"/webhooks/0/clientConfig/caBundle","value":"'"$CRT"'"},
