--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.yaml,\
   -H:IncludeResources=.*/*.sh,\
+  -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
   -H:IncludeResources=.*/banner.txt
 quarkus.native.native-image-xmx=16g
