--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -14,6 +14,7 @@ rules:
   - secrets
   - statefulsets
   - deployments
+  - deployments/scale
   - clusterroles
   - clusterrolebindings
   - serviceaccounts
