--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -8,8 +8,12 @@ metadata:
     app: StackGres
     scope: init
   annotations:
+    {{- if (semverCompare "<=1.12-0" .Capabilities.KubeVersion.GitVersion) }}
+    "helm.sh/hook": post-install,post-upgrade
+    {{- else }}
     "helm.sh/hook": post-install
-    "helm.sh/hook-delete-policy": hook-succeeded
+    {{- end }}
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
     metadata:
@@ -106,6 +110,7 @@ spec:
               -n '{{ .Release.Namespace }}' '{{ .Release.Name }}-certs' --type json --patch '[
                 {"op":"replace","path":"/data/root.key","value":"'"$KEY"'"},
                 {"op":"replace","path":"/data/server.crt","value":"'"$CRT"'"}]'
-            kubectl set env -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}' CERTIFICATE_UPDATE="$(date +%s)"
+            kubectl scale --timeout 1h --replicas 1 -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
+            kubectl wait --timeout 1h --for=condition=Available -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
       restartPolicy: OnFailure
 {{ end }}
