--- a/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
+++ b/stackgres-k8s/e2e/spec/enable-anti-affinity.values.yaml
@@ -1,16 +1,17 @@
-config:
-  postgresql:
+configurations:
+  postgresconfig:
     postgresql.conf:
       shared_buffers: '32MB'
-  backup:
+  backupconfig:
     create: false
-    minio:
-      create: false
 cluster:
-  volumeSize: 128Mi
-  backupconfig: null
-sidecar:
-  prometheus:
-    allowAutobind: false
+  pods:
+    persistentVolume:
+      size: 128Mi
+  configurations:
+    sgBackupConfig: null
+  prometheusAutobind: false
+minio:
+  create: false
 nonProductionOptions:
   disableClusterPodAntiAffinity: false
