--- a/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/gke/backup-with-gce-storage.values.yaml
@@ -1,22 +1,26 @@
-config:
-  postgresql:
+configurations:
+  postgresconfig:
     postgresql.conf:
       shared_buffers: '32MB'
-  backup:
+  backupconfig:
     create: true
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
-    fullSchedule: '0 5 31 2 *'
-    fullWindow: 1
-    diskRateLimit: 16777216
-    minio:
-      create: false
-    gcs:
-      bucket: stackgres-e2e-backup-with-gce-storage
-      serviceAccountJsonKey:
-          name: gke-service-account
-          key: gke-service-account.json
+    baseBackups:
+      cronSchedule: '0 5 31 2 *'
+      performance:
+        maxDiskBandwitdh: 16777216
+    storage:
+      gcs:
+        bucket: stackgres-e2e-backup-with-gce-storage
+        gcpCredentials:
+          secretKeySelectors:
+            serviceAccountJSON:
+              name: gke-service-account
+              key: gke-service-account.json
 cluster:
-  volumeSize: 128Mi
-sidecar:
-  prometheus:
-    allowAutobind: false
+  pods:
+    persistentVolume:
+      size: 128Mi
+  prometheusAutobind: false
+minio:
+  create: false
