--- a/stackgres-k8s/e2e/spec/restore.backup.values.yaml
+++ b/stackgres-k8s/e2e/spec/restore.backup.values.yaml
@@ -1,28 +1,32 @@
-config:
-  postgresql:
+configurations:
+  postgresconfig:
     postgresql.conf:
       shared_buffers: '32MB'
-  backup:
+  backupconfig:
     create: true
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
-    fullSchedule: '0 5 31 2 *'
-    fullWindow: 1
-    diskRateLimit: 16777216
-    minio:
-      create: false
-    s3Compatible:
-      bucket: restore-backup
-      accessKey:
-        name: restore-backup-minio
-        key: accesskey
-      secretKey:
-        name: restore-backup-minio
-        key: secretkey
-      region: k8s
-      enablePathStyleAddressing: true
-      endpoint: http://restore-backup-minio.restore-backup.svc.cluster.local:9000  
+    baseBackups:
+      cronSchedule: '0 5 31 2 *'
+      performance:
+        maxDiskBandwitdh: 16777216
+    storage:
+      s3Compatible:
+        bucket: restore-backup
+        awsCredentials:
+          secretKeySelectors:
+            accessKeyId:
+              name: restore-backup-minio
+              key: accesskey
+            secretAccessKey:
+              name: restore-backup-minio
+              key: secretkey
+        region: k8s
+        enablePathStyleAddressing: true
+        endpoint: http://restore-backup-minio.restore-backup.svc.cluster.local:900
 cluster:
-  volumeSize: 128Mi
-sidecar:
-  prometheus:
-    allowAutobind: false
+  pods:
+    persistentVolume:
+      size: 128Mi
+  prometheusAutobind: false
+minio:
+  create: false
