feat: make cluster helm chart parameters look like CRDs

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
@@ -41,7 +41,7 @@ spec:
     disableConnectionPooling: {{ .Values.cluster.pods.disableConnectionPooling }}
     disablePostgresUtil: {{ .Values.cluster.pods.disablePostgresUtil }}
     disableMetricsExporter: {{ .Values.cluster.pods.disableMetricsExporter }}
-  {{- if .Values.cluster.distributedLogs.enabled }}
+  {{- if .Values.distributedLogs.enabled }}
   distributedLogs:
     sgDistributedLogs: {{ .Values.cluster.distributedLogs.sgDistributedLogs }}
   {{- end }}
