fix: certificate removed from webhook when upgrading chart

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -56,7 +56,8 @@ rules:
   - mutatingwebhookconfigurations
   verbs:
   - get
-  - patch
+  - create
+  - delete
 - apiGroups: ["apiextensions.k8s.io", "customresourcedefinitions.apiextensions.k8s.io"]
   resources:
   - customresourcedefinitions
