--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -1,24 +1,20 @@
-{{- if and (or (not .Values.cert.key) (not .Values.cert.crt)) .Values.deploy.create }}
+{{ if and (or (not .Values.cert.key) (not .Values.cert.crt)) .Values.deploy.create }}
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: "{{ .Release.Name }}-create-certificate"
   namespace: {{ .Release.Namespace }}
   labels:
-    app: StackGres
+    app: stackgres-create-certificate
     scope: init
   annotations:
-    {{- if (semverCompare "<=1.12-0" .Capabilities.KubeVersion.GitVersion) }}
-    "helm.sh/hook": post-install,post-upgrade
-    {{- else }}
     "helm.sh/hook": post-install
-    {{- end }}
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   template:
     metadata:
       labels:
-        app: StackGres
+        app: stackgres-create-certificate
         scope: init
     spec:
       serviceAccountName: {{ .Release.Name }}
@@ -31,6 +27,8 @@ spec:
           - "-ecx"
           - |
             kubectl delete csr --ignore-not-found '{{ .Release.Name }}'
+            kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}
+            kubectl delete mutatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}
             cat << EOF > /tmp/csr.conf
             [req]
             req_extensions = v3_req
@@ -89,28 +87,25 @@ spec:
               exit 1
             fi
             
-            kubectl patch validatingwebhookconfiguration \
-              -n '{{ .Release.Namespace }}' '{{ .Release.Name }}' --type json --patch '[
-                {"op":"replace","path":"/webhooks/0/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/1/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/2/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/3/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/4/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/6/clientConfig/caBundle","value":"'"$CRT"'"}]'
-            kubectl patch mutatingwebhookconfiguration \
-              -n '{{ .Release.Namespace }}' '{{ .Release.Name }}' --type json --patch '[
-                {"op":"replace","path":"/webhooks/0/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/1/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/2/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/3/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/4/clientConfig/caBundle","value":"'"$CRT"'"},
-                {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"}]'
+            {{- $values := . }}
+            {{- $_ := set $values.Values.cert "crt" "${CRT}" }}
+            {{- $_ := set $values.Values.cert "key" "${KEY}" }}
+            cat << EOF | kubectl create -f -
+            {{- include (print $.Template.BasePath "/validating-webhook-configuration.yaml") . | indent 12 }}
+            EOF
+            cat << EOF | kubectl create -f -
+            {{- include (print $.Template.BasePath "/mutating-webhook-configuration.yaml") . | indent 12 }}
+            EOF
             kubectl patch secret \
               -n '{{ .Release.Namespace }}' '{{ .Release.Name }}-certs' --type json --patch '[
                 {"op":"replace","path":"/data/root.key","value":"'"$KEY"'"},
                 {"op":"replace","path":"/data/server.crt","value":"'"$CRT"'"}]'
+            
+            {{- if .Release.IsInstall }}
             kubectl scale --timeout 1h --replicas 1 -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
-            kubectl wait --timeout 1h --for=condition=Available -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
+            {{- else }}
+            kubectl rollout restart -n '{{ .Release.Namespace }}' 'deployment/{{ .Release.Name }}'
+            {{- end }}
+            kubectl wait --timeout 1h --for=condition=Ready -n '{{ .Release.Namespace }}' pod -l app=stackgres-operator --all
       restartPolicy: OnFailure
 {{ end }}
