--- a/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  {{- if or (not .Values.cert.key) (not .Values.cert.crt) }}
+  {{- if and .Release.IsInstall (or (not .Values.cert.key) (not .Values.cert.crt)) }}
   replicas: 0
   {{- else }}
   replicas: 1
